[package]
name = "arxiv"
version = "0.1.0"
authors = [
	"Samantha Nguyen, <contact@samanthanguyen.me>",
]
description = "Rust library to parse arXiv identifiers and references"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.63.0"
keywords = ["arxiv"]
categories = ["parsing", "text-processing"]
exclude = [
	".devcontainer",
	".github",
	".vscode",
	"deny.toml",
	".commitlintrc.json",
	"package.json",
	"package-lock.json",
]

[dependencies.time]
version = "0.3.20"
features = ["macros", "parsing"]
